# desktop-agent

./: .gitignore  BACKLOG.md  LICENSE  PLANO.md  README.md  WORKFLOW_ENGINE_PLAN.md  biome.json  package.json  tsconfig.base.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: app.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  native_shim.m  tauri.conf.json  tsconfig.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  native.rs
apps/desktop/src-tauri/src/sidecar/: mod.rs
apps/desktop/src/hooks/: use-toast.ts
apps/desktop/src/i18n/: config.ts  index.ts
apps/desktop/src/lib/: assistant-content.ts  code-utils.ts  execution-context.ts  markdown.ts  mermaid-utils.ts  mermaid.ts  rpc.ts  structured-ocr.ts  vision-file-context.ts  window.ts
apps/desktop/src/stores/: agent.ts
docs/history/: PLANO.md  helix-backlog.md
tests/agent-runtime/: agent-decision.test.ts  conversation-title.test.ts  improved-document.test.ts  mcp-tools.test.ts  parser-agent.test.ts  persisted-authorization.test.ts  space-file-context.test.ts  workspace-file-context.test.ts
tests/desktop/: agent-store.test.ts  assistant-content.test.ts  compact-result.test.ts  context-bar.test.ts  execution-context.test.ts  markdown.test.ts  mermaid-utils.test.ts  radial-navigation.test.ts  recent-conversations.test.ts  screen-region.test.ts  structured-ocr.test.ts  vision-file-context.test.ts
tests/storage/: space.test.ts  tmp-workspace-test.db-shm  workspace.test.ts
(+151 files in other folders)
